--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
 
         <header class="bg-white shadow sticky top-0 z-50">
             <div class="container mx-auto flex items-center justify-between py-4 px-6">
-                <!-- burger menu ngan logo -->
+                
                 <div class="flex items-center space-x-4">
-                    <!-- Mobile menu -->
+                    
                     <button id="menu-toggle" class="text-gray-700 focus:outline-none lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
                         </svg>
                     </button>
-                    <a href="/index.html">
-                        <img src="/asset/Lego-Logo.jpg" alt="Logo" class="lg:h-14 h-10">
+                    <a href="./index.html">
+                        <img src="./asset/Lego-Logo.jpg" alt="Logo" class="lg:h-14 h-10">
                     </a>
                 </div>
 
-                <!-- large Screens -->
                 <div class="hidden relative lg:flex flex-1 justify-center items-center">
                     <a href="#" class="text-lg m-6 group relative w-max">
                         <span>Home</span>
@@ -60,18 +59,16 @@
                     </a>
                 </div>
 
-                <!-- action icons -->
                 <div class="flex items-center space-x-4">
-                    <a href="#"><img src="/asset/Group 4.png" alt="Logo 1" class="h-8 opacity-100 hover:opacity-50"></a>
-                    <a href="#"><img src="/asset/Icon awesome-heart.png" alt="Logo 2" class="h-5 opacity-100 hover:opacity-50"></a>
-                    <a href="#"><img src="/asset/Icon feather-shopping-bag.png" alt="Logo 3" class="h-5 opacity-100 hover:opacity-50"></a>
+                    <a href="#"><img src="./asset/Group 4.png" alt="Logo 1" class="h-8 opacity-100 hover:opacity-50"></a>
+                    <a href="#"><img src="./asset/Icon awesome-heart.png" alt="Logo 2" class="h-5 opacity-100 hover:opacity-50"></a>
+                    <a href="#"><img src="./asset/Icon feather-shopping-bag.png" alt="Logo 3" class="h-5 opacity-100 hover:opacity-50"></a>
                 </div>
             </div>
 
-            <!-- Mobile Navigation -->
             <nav id="mobile-menu" class="hidden lg:hidden bg-white shadow-md">
                 <div class="space-y-4 py-4 px-6">
-                    <a href="/index.html" class="block py-2 px-3 rounded bg-blue-500 text-white" aria-current="page">Home</a>
+                    <a href="./index.html" class="block py-2 px-3 rounded bg-blue-500 text-white" aria-current="page">Home</a>
                     <a href="#" class="block py-2 px-3 text-black rounded hover:bg-gray-700 hover:text-white">Shop</a>
                     <a href="#" class="block py-2 px-3 text-black rounded hover:bg-gray-700 hover:text-white">Discover</a>
                     <a href="#" class="block py-2 px-3 text-black rounded hover:bg-gray-700 hover:text-white">Help</a>
@@ -119,13 +116,11 @@
             </div>
 
             <div class="container mx-auto px-4" >
-                <!-- Carousel for Mobile Screens -->
                 <div class="relative overflow-hidden block sm:hidden">
                     <div id="carousel" class="flex transition-transform duration-500 ease-in-out">
-                        <!-- Slide 1 -->
                         <div class="min-w-full bg-white shadow-lg rounded-lg p-6 text-center flex flex-col justify-between">
                             <div>
-                                <img src="/asset/1.png" alt="children" class="mb-4">
+                                <img src="./asset/1.png" alt="children" class="mb-4">
                                 <h3 class="text-2xl font-bold mb-3">Children</h3>
                                 <p class="text-gray-600">
                                     We believe every child should have an opportunity to achieve their potential. Learning through play is
@@ -134,10 +129,9 @@
                             </div>
                             <a href="#" class="mt-6 text-indigo-500 group-hover:text-white">Read More</a>
                         </div>
-                        <!-- Slide 2 -->
                         <div class="min-w-full bg-white shadow-lg rounded-lg p-6 text-center flex flex-col justify-between">
                             <div>
-                                <img src="/asset/2.png" alt="env" class="mb-4">
+                                <img src="./asset/2.png" alt="env" class="mb-4">
                                 <h3 class="text-2xl font-bold mb-3">Environment</h3>
                                 <p class="text-gray-600">
                                     We are committed to protecting the environment and the planet our children will inherit.
@@ -146,10 +140,9 @@
                             </div>
                             <a href="#" class="mt-6 text-indigo-500 group-hover:text-white">Read More</a>
                         </div>
-                        <!-- Slide 3 -->
                         <div class="min-w-full bg-white shadow-lg rounded-lg p-6 text-center flex flex-col justify-between">
                             <div>
-                                <img src="/asset/3.png" alt="ppl" class="mb-4">
+                                <img src="./asset/3.png" alt="ppl" class="mb-4">
                                 <h3 class="text-2xl font-bold mb-3">People</h3>
                                 <p class="text-gray-600">
                                     We value the people, partners, and suppliers who make LEGO play experiences possible and we work hard to make
@@ -159,7 +152,6 @@
                             <a href="#" class="mt-6 text-indigo-500 group-hover:text-white">Read More</a>
                         </div>
                     </div>
-                    <!-- Pagination -->
                     <div id="pagination" class="flex justify-center mt-4">
                         <span class="dot w-3 h-3 mx-1 rounded-full bg-gray-400 cursor-pointer"></span>
                         <span class="dot w-3 h-3 mx-1 rounded-full bg-gray-400 cursor-pointer"></span>
@@ -167,10 +159,9 @@
                     </div>
                 </div>
 
-                <!-- 3-Row Layout for Tablet Screens -->
                 <div class="hidden sm:grid md:grid-cols-1 md:gap-6 lg:hidden gap-6 animate-fade-in">
                     <div class="flex items-center bg-white shadow-lg rounded-lg p-6 hover:bg-gradient-to-t from-indigo-300 via-indigo-400 to-indigo-500 hover:scale-105 hover:text-white group">
-                        <img src="/asset/1.png" alt="children" class="w-1/3 mr-6">
+                        <img src="./asset/1.png" alt="children" class="w-1/3 mr-6">
                         <div>
                             <h3 class="text-2xl font-bold mb-3">Children</h3>
                             <p class="text-gray-600  group-hover:text-white">
@@ -180,7 +171,7 @@
                         </div>
                     </div>
                     <div class="flex items-center bg-white shadow-lg rounded-lg p-6 hover:bg-gradient-to-t from-indigo-300 via-indigo-400 to-indigo-500 hover:scale-105 hover:text-white group">
-                        <img src="/asset/2.png" alt="env" class="w-1/3 mr-6">
+                        <img src="./asset/2.png" alt="env" class="w-1/3 mr-6">
                         <div>
                             <h3 class="text-2xl font-bold mb-3">Environment</h3>
                             <p class="text-gray-600  group-hover:text-white">
@@ -190,7 +181,7 @@
                         </div>
                     </div>
                     <div class="flex items-center bg-white shadow-lg rounded-lg p-6 hover:bg-gradient-to-t from-indigo-300 via-indigo-400 to-indigo-500 hover:scale-105 hover:text-white group">
-                        <img src="/asset/3.png" alt="ppl" class="w-1/3 mr-6">
+                        <img src="./asset/3.png" alt="ppl" class="w-1/3 mr-6">
                         <div>
                             <h3 class="text-2xl font-bold mb-3">People</h3>
                             <p class="text-gray-600  group-hover:text-white">
@@ -201,12 +192,10 @@
                     </div>
                 </div>
 
-                <!-- 3-Column Layout for Laptop and Larger Screens -->
                 <div class="hidden lg:grid lg:grid-cols-3 lg:gap-6" id="animate-section">
-                    <!-- Column 1 -->
                    <div class="bg-white shadow-lg rounded-lg p-6 text-center opacity-0 transform translate-y-10 transition-all duration-700 hover:bg-gradient-to-t from-indigo-300 via-indigo-400 to-indigo-500 hover:scale-105 hover:text-white group flex flex-col justify-between">
                        <div>
-                           <img src="/asset/1.png" alt="children" class="mb-4">
+                           <img src="./asset/1.png" alt="children" class="mb-4">
                            <h3 class="text-2xl font-bold mb-3 group-hover:text-white">Children</h3>
                            <p class="text-gray-600 group-hover:text-white pb-6">
                                We believe every child should have an opportunity to achieve their potential. Learning through play is
@@ -215,10 +204,9 @@
                        </div>
                         <a href="#" class="mt-6 text-indigo-500 group-hover:text-white">Read More</a>
                     </div>
-                    <!-- Column 2 -->
                     <div class="bg-white shadow-lg rounded-lg p-6 text-center opacity-0 transform translate-y-10 transition-all duration-700 hover:bg-gradient-to-t from-indigo-300 via-indigo-400 to-indigo-500 hover:scale-105 hover:text-white group flex flex-col justify-between">
                         <div>
-                            <img src="/asset/2.png" alt="env" class="mb-4">
+                            <img src="./asset/2.png" alt="env" class="mb-4">
                             <h3 class="text-2xl font-bold mb-3 group-hover:text-white">Environment</h3>
                             <p class="text-gray-600 group-hover:text-white pb-6">
                                 We are committed to protecting the environment and the planet our children will inherit.
@@ -230,7 +218,7 @@
                     <!-- Column 3 -->
                     <div class="bg-white shadow-lg rounded-lg p-6 text-center opacity-0 transform translate-y-10 transition-all duration-700 hover:bg-gradient-to-t from-indigo-300 via-indigo-400 to-indigo-500 hover:scale-105 hover:text-white group flex flex-col justify-between">
                         <div>
-                            <img src="/asset/3.png" alt="ppl" class="mb-4">
+                            <img src="./asset/3.png" alt="ppl" class="mb-4">
                             <h3 class="text-2xl font-bold mb-3 group-hover:text-white">People</h3>
                             <p class="text-gray-600 group-hover:text-white">
                                 We value the people, partners, and suppliers who make LEGO play experiences possible and we work hard to make
@@ -248,9 +236,9 @@
                 <div class="lg:flex lg:justify-around">
                     <div class="mb-6 justify-start md:pr-5">
                         <a class="flex flex-row items-start lg:flex-col">
-                            <img src="/asset/Lego-Logo.jpg" class="h-16 pl-2 lg:pl-0 sm:h-24 lg:h-28 mb-4 md:mb-0 me-3 " alt="logofooter" />
+                            <img src="./asset/Lego-Logo.jpg" class="h-16 pl-2 lg:pl-0 sm:h-24 lg:h-28 mb-4 md:mb-0 me-3 " alt="logofooter" />
                             <button class="flex items-center text-white bg-black px-4 py-2 md:px-6 md:py-3 drop-shadow-md rounded-md md:mt-2 lg:px-4 lg:py-2">
-                                <img src="/asset/location.png" class="h-5 mr-2 color" alt="logofooter" />
+                                <img src="./asset/location.png" class="h-5 mr-2 color" alt="logofooter" />
                                 <span>Malaysia</span>
                             </button>
                         </a>
@@ -274,7 +262,7 @@
                             </button>
                             <div id="about-us" class="accordion-content hidden lg:block">
                                 <h2 class="mb-8 text-sm font-bold text-gray-900 uppercase dark:text-white hidden lg:block pl-2">About Us</h2>
-                                <ul class="text-gray-500 dark:text-white font-light">
+                                <ul class="text-white dark:text-white font-light">
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">LEGO&reg; news</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">Sustainability</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">Supply chain transparency<br>statement</a></li>
@@ -300,7 +288,7 @@
                             </button>
                             <div id="support" class="accordion-content hidden lg:block">
                                 <h2 class="mb-8 text-sm font-bold text-gray-900 uppercase dark:text-white hidden lg:block pl-2">Support</h2>
-                                <ul class="text-gray-500 dark:text-white font-light">
+                                <ul class="text-white dark:text-white font-light">
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">Contact us</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">Find building instructions</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">Replacement parts</a></li>
@@ -327,7 +315,7 @@
                             </button>
                             <div id="attr" class="accordion-content hidden lg:block">
                                 <h2 class="mb-8 text-sm font-bold text-gray-900 uppercase dark:text-white hidden lg:block">Attraction</h2>
-                                <ul class="text-gray-500 dark:text-white font-light">
+                                <ul class="text-white dark:text-white font-light">
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">LEGO&reg; House</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">LEGOLAND&reg; Parks</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">LEGOLAND Discovery Centers</a></li>
@@ -350,7 +338,7 @@
                             </button>
                             <div id="more-us" class="accordion-content hidden lg:block">
                                 <h2 class="mb-8 text-sm font-bold text-gray-900 uppercase dark:text-white hidden lg:block">More From Us</h2>
-                                <ul class="text-gray-500 dark:text-white font-light">
+                                <ul class="text-white dark:text-white font-light">
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">Lego&reg; LIFE</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">LEGO Education</a></li>
                                     <li class="mb-4 pl-2"><a href="#" class="hover:underline">LEGO Ideas</a></li>
@@ -400,7 +388,7 @@
 
         <footer class="bg-gray-800 text-gray-400 py-4">
             <div class="container mx-auto px-4 text-center">
-                <p>&copy; 2024 WEBSE Task. Muhammad Adham.</p>
+                <p>&copy; 2025 WEBSE Task.</p>
             </div>
         </footer>
 
@@ -408,4 +396,4 @@
 
 </html>
 
-<script src="/js/index.js"></script>
+<script src="./js/index.js"></script>
